# drone_exploration

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker_run.sh  launch_final.sh  launch_final.sh.backup  launch_fixed.sh  launch_minimal_map.sh  launch_rviz_fixed.sh  launch_rviz_separate.sh  launch_single_frame.sh  launch_static_map.sh  monitor_learning.sh  nohup.out  q_table.npy  quick_headless_launch.sh  select_world.sh  start_autonomous.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_rl/share/drone_rl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/drone_rl/share/drone_rl/config/: drone_config.yaml  drone_exploration.rviz  drone_exploration_robust.rviz
install/drone_rl/share/drone_rl/launch/: sim_launch.py  test_launch.py
install/drone_rl/share/drone_rl/worlds/: maze_world.world
log/: latest_build
metrics/: exploration_metrics.json
src/drone_rl/: README.md  package.xml  setup.py
src/drone_rl/drone_rl/: __init__.py  exploration_metrics.py  q_learning_agent.py
src/drone_rl/scripts/: quick_start.sh
src/drone_rl/src/: q_learning_agent.py
src/drone_rl/urdf/: drone.urdf.xacro  drone_simple.urdf
src/drone_rl/worlds/: exploration_world.world  rooms_world.world  scattered_world.world
src/log/: latest_build
